--- a/.gitignore
+++ b/.gitignore
@@ -170,7 +170,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -257,3 +257,6 @@ docs/output
 
 # vscode
 .vscode
+
+
+Cerveau/package-lock.json
